[tool.poetry]
name = "luigi-docker"
version = "0.1.0"
description = "A simple docker build workflow"
authors = ["Fabien D. <fabien@myprod.net>"]

[tool.poetry.dependencies]
python = "^3.10"
luigi = "^3.1.1"
docker = "^6.0.0"
dependency-injector = "^4.40.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
