[tool.poetry]
name = "luigi-docker"
version = "0.1.0"
description = "A simple docker build workflow"
authors = ["Fabien D. <fabien@myprod.net>"]

[tool.poetry.dependencies]
python = "^3.10"
luigi = "^3.3.0"
docker = "^6.1.3"
dependency-injector = "^4.41.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
